--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,10 +15,25 @@
         android:theme="@style/Theme.RecipeHub"
         tools:targetApi="31">
         <activity
-            android:name=".LoginActivity"
+            android:name=".testactivity"
             android:exported="false" />
         <activity
-            android:name=".SignupActivity"
+            android:name=".CreateReviewActivity"
+            android:exported="false" />
+        <activity
+            android:name=".RecipeDetailsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".RecipeListActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Home2Activity"
+            android:exported="false" />
+        <activity
+            android:name=".HomeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".LoginActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
