--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,18 @@
         android:theme="@style/Theme.RecipeHub"
         tools:targetApi="31">
         <activity
+            android:name=".UpdateRecipeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AddRecipeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".RecipeListActivity2"
+            android:exported="false" />
+        <activity
+            android:name=".PreHomeActivity2"
+            android:exported="false" />
+        <activity
             android:name=".testactivity"
             android:exported="false" />
         <activity
@@ -25,9 +37,6 @@
             android:exported="false" />
         <activity
             android:name=".RecipeListActivity"
-            android:exported="false" />
-        <activity
-            android:name=".Home2Activity"
             android:exported="false" />
         <activity
             android:name=".HomeActivity"
